# padroes-software-atividade-3

./: Orientacoes_Projeto_Consultas_Medicas.md  README.md  regras-de-negocio.md
sistema_consultas/: .gitignore  README.md  pyproject.toml
sistema_consultas/docs/: auditoria-e-refatoracao.md  evolucao-sistema.md
sistema_consultas/src/consultas/: main.py
sistema_consultas/src/consultas/application/dtos/: consulta_dtos.py
sistema_consultas/src/consultas/application/use_cases/: agendar_consulta.py  consultar_historico_prontuario.py  gerar_receituario.py  listar_consultas_do_dia.py  registrar_prontuario.py
sistema_consultas/src/consultas/domain/: events.py  exceptions.py
sistema_consultas/src/consultas/domain/builders/: prontuario_builder.py
sistema_consultas/src/consultas/domain/entities/: consulta.py  endereco.py  exame.py  medicamento.py  medico.py  paciente.py  plano_saude.py  prescricao.py  prontuario.py  telefone.py
sistema_consultas/src/consultas/domain/enums/: estado_consulta.py  sexo.py  tipo_atendimento.py  tipo_telefone.py
sistema_consultas/src/consultas/domain/factories/: paciente_factory.py
sistema_consultas/src/consultas/domain/strategies/: atendimento.py
sistema_consultas/tests/integration/: test_api_fluxo.py
sistema_consultas/tests/unit/application/: test_agendar_consulta.py  test_gerar_receituario.py  test_listar_consultas_do_dia.py  test_registrar_prontuario.py
sistema_consultas/tests/unit/domain/: __init__.py  test_atendimento_strategy.py  test_consulta_state.py  test_paciente_factory.py  test_prontuario_builder.py
(+30 files in other folders)
